# django101

./: .djlintrc  .pylintrc  Dockerfile  Pipfile  README.md  config.py  dynaconf_validators.toml  manage.py  mypy.ini  pyproject.toml  settings.yaml
.github/workflows/: test.yaml
apis/: responses.py  serializers.py  tests.py  urls.py  views.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_id.py
blog/static/css/: blog.css
blog/templates/blog/: base.html
blog/templates/blog/post/: detail.html  list.html  pagination.html  share.html
django101/: asgi.py  settings.py  urls.py  wsgi.py
hello/: admin.py  models.py  urls.py  views.py
hello/migrations/: 0001_initial.py  0002_helloer_created_at_helloer_updated_at.py
hello/templates/: list.html
